<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess with Fags</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="adds">Reserved for ads</string>

    <!-- Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Account Page -->
    <string name="title_activity_account_page">Account</string>
    <string name="button_account">Account</string>

    <!-- Rated Games Page -->
    <string name="title_activity_rated_game_page">Rated Game</string>
    <string name="button_rated">Rated Game</string>
    <string name="login_name">Reserved for log in name</string>
    <string name="button_rated_standard_chess">Standard Chess</string>
    <string name="button_rated_fischer_960">Fischer 960</string>
    <string name="button_rated_bong_cloud">Bong Cloud</string>
    <string name="button_rated_maharaja">Maharaja</string>
    <string name="button_rated_flip_chess">Flip Chess</string>
    <string name="button_rated_shatranj">Shatranj</string>

    <!-- Unrated Page -->
    <string name="title_activity_unrated_game_page">Unrated Game</string>
    <string name="button_unrated">Unrated Game</string>
    <string name="button_unrated_standard_chess">Standard Chess</string>
    <string name="button_unrated_fischer_960">Fischer 960</string>
    <string name="button_unrated_bong_cloud">Bong Cloud</string>
    <string name="button_unrated_maharaja">Maharaja</string>
    <string name="button_unrated_flip_chess">Flip Chess</string>
    <string name="button_unrated_shatranj">Shatranj</string>

    <!-- Friends Page -->
    <string name="title_activity_friends_page">Friends</string>
    <string name="button_friends">Friends</string>

    <!-- Help Page -->
    <string name="title_activity_help_page">Help</string>
    <string name="button_help">Help</string>

    <!-- About Page -->
    <string name="title_activity_about_page">About</string>
    <string name="button_about">About</string>

    <!-- Game Types Page -->
    <string name="title_activity_game_types_page">Game Types</string>
    <string name="button_game_types">Game Type Descriptions</string>
    <string name="game_types_header">Click a game type for an explination of how to play</string>
    <string name="button_game_types_standard_chess">Standard Chess</string>
    <string name="button_game_types_fischer_960">Fischer 960</string>
    <string name="button_game_types_bong_cloud">Bong Cloud</string>
    <string name="button_game_types_maharaja">Maharaja</string>
    <string name="button_game_types_flip_chess">Flip Chess</string>
    <string name="button_game_types_shatranj">Shatranj</string>

    <!-- Standard Chess Board Page -->
    <string name="title_activity_unrated_standard_chess_board">Unrated Standard Chess Board</string>
    <string name="title_activity_rated_standard_chess_board">Rated Standard Chess Board</string>
    <string name="title_promotion">Rated Standard Chess Board</string>
    <string name="game_state">Game State</string>
    
     <!-- Maharaja Chess Board Page -->
    <string name="title_activity_unrated_maharaja">UnratedMaharaja</string>

    <!-- New and unsorted autogenerated -->

    <string name="title_activity_notice_dialog">NoticeDialog</string>
    <string name="title_activity_unrated_maharaja_chess_board">UnratedMaharajaChessBoard</string>
    
</resources>
